--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@amc-technology/davinci-api": "1.0.21",
+    "@amc-technology/davinci-api": "^1.0.21",
     "@amc-technology/ui-library": "^1.0.8",
     "@angular/animations": "~7.2.0",
     "@angular/common": "~7.2.0",
